fix: yml file parsing issue

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,6 +1,6 @@
 blank_issues_enabled: false
 defaults:
-  - name: From: 留言板
+  - name: "From: 留言板"
     filename: message.md
     labels: blog
     description: 留言板模板
