--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -2,7 +2,7 @@ blank_issues_enabled: false
 defaults:
   - name: "From: 留言板"
     filename: message.md
-    labels: blog
+    labels: [blog]
     description: 留言板模板
   - name: Default Issue
     filename: default.md
