--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -3,7 +3,7 @@ defaults:
   - name: Common Issue
     filename: common.md
     labels: []
-    description: Common Issue Template
+    description: Zommon Issue Template
   - name: "From: 留言板"
     filename: message.md
     labels: [blog]
